# dnf-plugins-perfmetrics

./: .gitignore  CMakeLists.txt  README.md
etc/dnf/plugins/: CMakeLists.txt
plugins/: CMakeLists.txt  perfmetrics.py
